# fingerprint-launcher

./: .gitignore  README.md  build.py  check_wbf.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
core/: __init__.py  action_registry.py  action_runner.py  database.py  execution.py  executor.py  time_utils.py  winbio.py  windows_audio.py
installer/: FingerprintLauncher.iss  setup.iss
services/: __init__.py  autostart.py  timer_manager.py
tests/: test_action_picker.py  test_action_registry.py  test_action_runner.py  test_autostart.py  test_database.py  test_executor.py  test_i18n.py  test_single_instance.py  test_theme.py  test_time_utils.py  test_timer_manager.py  test_ui_integration.py  test_winbio.py  test_windows_audio.py
ui/: __init__.py  action_picker.py  finger_wizard.py  i18n.py  main_window.py  scan_prompt.py  theme.py  tray.py  triggered_scan.py
